<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/pm_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_pm_toolbar"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/stroke_rate"
                style="@style/TextAppearance.AppCompat.Display3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="20" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/units_strokes_per_minute" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/split_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/split"
                style="@style/TextAppearance.AppCompat.Display4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                tools:text="01:47" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="32dp"
                android:text="@string/units_pace_500" />


        </LinearLayout>

        <Chronometer
            android:id="@+id/timer"
            style="@style/TextAppearance.AppCompat.Display3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:textStyle="bold"
            tools:text="35:23.7" />

        <LinearLayout
            android:id="@+id/distance_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/distance"
                style="@style/TextAppearance.AppCompat.Display3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="12565" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/units_metres" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/start_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/default_padding"
            android:text="@string/action_start_tracking"
            app:backgroundTint="@color/start_green"
            app:icon="@android:drawable/ic_media_play" />

    </LinearLayout>
</LinearLayout>
